--- a/_site.yml
+++ b/_site.yml
@@ -7,7 +7,7 @@ bootstrap: 3.3.4
 # navbar_right_items: 0
 google_analytics: G-KHFGPRJ6NH
 linkedin_analytics: UA-89086991-2
-cname: manskirt.eu
+cname: coaching-shop.eu
 copyright_years: 2020-2021
 social:
     facebook:  https://www.facebook.com/coachingshop
